--- a/lib/make/makefile-avra
+++ b/lib/make/makefile-avra
@@ -1,4 +1,4 @@
-name = test
+name = ""
 
 asm = $(name).asm
 hex = tmp/$(name)/$(name).hex
@@ -6,12 +6,6 @@ eep = tmp/$(name)/$(name).eep.hex
 list = tmp/$(name)/$(name).list
 map = tmp/$(name)/$(name).map
 
-
-AD_dev = m328p
-AD_prog = arduino
-AD_baud = 115200
-AD_port	= /dev/ttyUSB0
-	
 all: $(hex)
 
 $(hex): $(asm)
@@ -19,11 +13,11 @@ $(hex): $(asm)
 	avra -I ${HOME}/atmega/lib/avra -l $(list) -m $(map) -o $(hex) -e $(eep) $(asm)
 	@mv $(name).obj tmp/$(name)/$(name).obj
 
+upload: $(hex)
+	make -f ${home}/atmega/lib/make/upload name=$(name)
+
 clean:
 	rm -rf tmp
-
-upload: $(hex)
-	"avrdude" -c $(AD_prog) -b $(AD_baud) -p $(AD_dev) -P $(AD_port) -U flash:w:$(hex):i
 
 dump: $(hex)
 	@avr-objdump -m avr -D $(hex)
